# media-archivist

./: .gitignore  GEMINI.md  README.md  pyproject.toml
docs/: SPEC_v1.md
src/media_archivist/: main.py
src/media_archivist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/media_archivist/agent/: extractor.py  hasher.py  scanner.py
src/media_archivist/core/: database.py
src/media_archivist/web/: app.py
